--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@projectstorm/react-diagrams": "^7.0.2",
+    "beautiful-react-diagrams": "^0.5.1",
     "bootstrap": "^5.3.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-graph-vis": "^1.0.7",
+    "vis-network": "^9.1.6"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
