--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@projectstorm/react-diagrams": "^7.0.2",
     "beautiful-react-diagrams": "^0.5.1",
     "bootstrap": "^5.3.1",
+    "font-awesome": "^4.7.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.46.1",
+    "react-icons": "^4.11.0",
     "react-scroll": "^1.8.9"
   },
   "devDependencies": {
