--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@projectstorm/react-diagrams": "^7.0.2",
+    "axios": "^1.5.0",
     "beautiful-react-diagrams": "^0.5.1",
     "bootstrap": "^5.3.1",
     "font-awesome": "^4.7.0",
