--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.46.1",
     "react-icons": "^4.11.0",
+    "react-responsive-modal": "^6.4.2",
     "react-router-dom": "^6.15.0",
     "react-scroll": "^1.8.9"
   },
